<resources>
    <string name="app_name">Todo List App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="todo">Todo</string>
    <string name="gallery">Gallery</string>
    <string name="profile">Profile</string>
    <string name="today">Today</string>
    <string name="show_more">Show more</string>
    <string name="in_progress">In Progress</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="_12_42_pm">12:42 PM</string>
    <string name="complete">Complete</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="have_an_account">Have an account?</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="log_out">Log Out</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="due_date">Due Date</string>
    <string name="reminder">Reminder</string>
    <string name="attach_file">Attach File</string>
    <string name="your_task_title">Your task title</string>
    <string name="type_your_task_description_here">Type your task description here</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="attach_your_file">Attach your file...</string>
</resources>